--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.8"
+        "phpunit/phpunit": "~4.8",
+        "victorjonsson/markdowndocs": "^1.3"
     },
     "autoload": {
         "psr-4": { "CollingMedia\\Infusionsoft\\" : "src/" }
